--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="nasa.png" alt="Platzi Video">
+    <img class="header__img" src="img/nasa.png" alt="Platzi Video">
     <div class="header__menu">
       <div class="header__menu--profile">
-        <img src="plaanet.png" alt="">
+        <img src="img/plaanet.png" alt="">
         <p>Perfil</p>
       </div>
       <ul>
@@ -35,7 +35,7 @@
 <div class="carousel__container">
 
     <div class="carousel-item">
-      <img class="carousel-item__img" src="pluton2.gif" alt="">
+      <img class="carousel-item__img" src="img/pluton2.gif" alt="">
       <div class="carousel-item__details">
         <p class="carousel-item__details--title">Plutón</p>
         <p class="carousel-item__details--subtitle">200 Horas de vuelo</p>
@@ -43,7 +43,7 @@
     </div>
 
   <div class="carousel-item">
-    <img class="carousel-item__img" src="mercury.gif" alt="">
+    <img class="carousel-item__img" src="img/mercury.gif" alt="">
     <div class="carousel-item__details">
       <p class="carousel-item__details--title"> Mercurio</p>
       <p class="carousel-item__details--subtitle"> 3 Horas 2 minutos</p>
@@ -51,7 +51,7 @@
   </div>
 
   <div class="carousel-item">
-    <img class="carousel-item__img" src="Alquímedes.gif" alt="">
+    <img class="carousel-item__img" src="img/Alquímedes.gif" alt="">
     <div class="carousel-item__details">
       <p class="carousel-item__details--title"> Alquímedes</p>
       <p class="carousel-item__details--subtitle"> 3500 Horas 14 minutos</p>
@@ -59,7 +59,7 @@
   </div>
 
   <div class="carousel-item">
-    <img class="carousel-item__img" src="venus3.gif" alt="">
+    <img class="carousel-item__img" src="img/venus3.gif" alt="">
     <div class="carousel-item__details">
       <p class="carousel-item__details--title"> Venus</p>
       <p class="carousel-item__details--subtitle"> 3 Horas 10 minutos</p>
@@ -67,7 +67,7 @@
   </div>
 
   <div class="carousel-item">
-    <img class="carousel-item__img" src="jupiter.gif" alt="">
+    <img class="carousel-item__img" src="img/jupiter.gif" alt="">
     <div class="carousel-item__details">
       <p class="carousel-item__details--title">Jupiter</p>
       <p class="carousel-item__details--subtitle"> 3 Horas 49 minutos</p>
