--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Title -->
-  <title>Nasa emulator</title>
+  <title>Maquetación Principal</title>
 </head>
 <body>
   <header class="header">
