--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
+<!--   <link rel="stylesheet" href="mediaQuery.css"> -->
   <!-- Title -->
   <title>Maquetación Principal</title>
 </head>
@@ -27,11 +28,12 @@
   </header>
 
   <section class="main">
-    <h2 class="main__title">¿A dónde quieres viajar hoy?</h2>
+    <h2 class="main__title">¿A dónde quieres viajar?</h2>
     <input type="text" class="input" placeholder="Buscar...">
-  </section>
-  <h2 class="categories__title">Elije tu destino</h2>
-  
+    </section>
+
+  <h1 class="categories__title">Elije tu destino</h1>
+
 <div class="carousel__container">
 
     <div class="carousel-item">
