--- a/iniciar_sesion/iniciar-sesion.html
+++ b/iniciar_sesion/iniciar-sesion.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="/img/nasa.png">
+    <img class="header__img" src="img/nasa.png">
   </header>
   <section class="login"> <!-- Fondo -->
       <section class="login__container"><!-- Sector para Formulario -->
@@ -30,8 +30,8 @@
         </div>
       </form>
       <section class="login__container--social-media">
-        <div><img src="/img/google-icon.png" alt="Google">Inicia sesión con Google</div>
-        <div><img src="/img/twitter-icon.png" alt="Twitter">Inicia sesión con Twitter</div>
+        <div><img src="img/google-icon.png" alt="Google">Inicia sesión con Google</div>
+        <div><img src="img/twitter-icon.png" alt="Twitter">Inicia sesión con Twitter</div>
       </section>
       <p class="login__container--register">No tienes ninguna cuenta <a href="">Regístrate</a></p>
     </section> 
