--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>Perfil</p>
       </div>
       <ul>
-        <li><a href="/">Cuenta</a></li>
-        <li><a href="/">Cerrar Sesión</a></li>
+        <li><a href="./iniciar_sesion/iniciar-sesion.html">Cuenta</a></li>
+        <li>Cerrar Sesión</li>
       </ul>
     </div>
   </header>
