--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Perfil</p>
       </div>
       <ul>
-        <li><a href="./iniciar_sesion/iniciar-sesion.html">Cuenta</a></li>
+        <li><a href="../iniciar_sesion/iniciar-sesion.html">Cuenta</a></li>
         <li>Cerrar Sesión</li>
       </ul>
     </div>
