--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
-<!--   <link rel="stylesheet" href="mediaQuery.css"> -->
   <!-- Title -->
-  <title>Maquetación Principal</title>
+  <title>Nasa</title>
 </head>
 <body>
   <header class="header">
